--- a/calendar.html
+++ b/calendar.html
@@ -55,13 +55,13 @@
             <div id="title-calendar">
                 <h1 class="h1-calendar">Agenda do Projeto <span id="agape"> Ágape</span> </h1>
                 <h2 class="h2-calendar"></h2>
-                <p class="p-calendar">Esta é uma das principais formas de ficar atento á todas as novidades do Projeto Ágape</p>
+                <p class="p-calendar">Esta é uma das principais formas de ficar atento a todas as novidades do Projeto Ágape</p>
             </div>
         </section>
 
 
         <section class="calendar">
-          <iframe src="https://calendar.google.com/calendar/embed?src=f6e38cbe63b7789a06b5538f0dbb87e265a59c53ee33bc3e595c6e9cb4ef374e%40group.calendar.google.com&ctz=UTC" style="border: 0" width="800vh" height="600vh" frameborder="0" scrolling="no"></iframe>
+          <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FSao_Paulo&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=0&showTitle=0&showNav=1&hl=pt_BR&src=ZjZlMzhjYmU2M2I3Nzg5YTA2YjU1MzhmMGRiYjg3ZTI2NWE1OWM1M2VlMzNiYzNlNTk1YzZlOWNiNGVmMzc0ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=cHQuYnJhemlsaWFuI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688&color=%230B8043" style="border:solid 0px" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </section>
         
     </main>
