--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h2 class="h2-conteudo">SOBRE O PROJETO ÁGAPE</h2>
             <div class="conteudo">
             <p class="p-conteudo">O Projeto Ágape é um projeto assistencial, sem fins lucrativos
-                e sem vinculo com partidos políticos e religiosos, que
+                e sem vínculo com partidos políticos e religiosos, que
                 desenvolve ações para arrecadação de brinquedos,
                 alimentos, roupas, produtos de higiene e outros indispensáveis
                 à subsistência, saúde e dignidade humana.
