--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
         <div class="coluna">
             <h2 class="h2-conteudo">SOBRE O PROJETO ÁGAPE</h2>
-            <div class="conteudo">
+            <div class="div-conteudo">
             <p class="p-conteudo">O Projeto Ágape é um projeto assistencial, sem fins lucrativos
                 e sem vínculo com partidos políticos e religiosos, que
                 desenvolve ações para arrecadação de brinquedos,
@@ -121,10 +121,10 @@
 
     <hr id="04">
 
-    <section id="apoio">
-        <div class="apoio">
+    <section id="section-apoio">
+        <div class="div-apoio">
             <h2 class="h2-conteudo">SEJA UM APOIADOR</h2>
-            <div class="conteudo">
+            <div class="div-conteudo">
                 <p class="p-conteudo">
                     O Projeto busca apoiadores para
                     expandir sua capacidade de
@@ -155,7 +155,7 @@
             <h2 class="h2-footer">Copyright  &#169;</h2>
         </div>
 
-        <div class="redes">  
+        <div class="icons-redes">  
             <nav class="nav-footer">
                 <a href="https://www.instagram.com/agapebarbacena/"><i class="icon fa-brands fa-instagram"> </i></a>
                 <a href="https://www.facebook.com/agapebarbacena/"><i class="icon fa-brands fa-facebook"></i></a>
