--- a/calendar.html
+++ b/calendar.html
@@ -60,7 +60,7 @@
         </section>
 
 
-        <section class="calendar">
+        <section class="section-calendar">
           <iframe src="https://calendar.google.com/calendar/embed?height=600&wkst=1&bgcolor=%23ffffff&ctz=America%2FSao_Paulo&showDate=1&showPrint=0&showTabs=0&showCalendars=0&showTz=0&showTitle=0&showNav=1&hl=pt_BR&src=ZjZlMzhjYmU2M2I3Nzg5YTA2YjU1MzhmMGRiYjg3ZTI2NWE1OWM1M2VlMzNiYzNlNTk1YzZlOWNiNGVmMzc0ZUBncm91cC5jYWxlbmRhci5nb29nbGUuY29t&src=cHQuYnJhemlsaWFuI2hvbGlkYXlAZ3JvdXAudi5jYWxlbmRhci5nb29nbGUuY29t&color=%23009688&color=%230B8043" style="border:solid 0px" width="800" height="600" frameborder="0" scrolling="no"></iframe>
         </section>
         
